Handled review issues
# 0.00.47 (51069) Apr 22, 2011
Fixed: laser can be rotated out of the play area
Fixed: laser can be dragged out of the play area
Fixed: prisms can be dragged out of the play area
Fixed: intensity sensor can be dragged out of the play area
Fixed: protractor can be dragged out of the play area
Fixed: tools cannot be dragged out of the play area when dragging out of the toolbox
refactored base class Box for use in VBox and HBox, created HBox class
Fixed: when dragging tools out of the toolbox they can be dragged out of the visible region
Constrained velocity sensor node to remain in the play area
Refactored MediumControlPanel to use PhetPComboBox instead of PComboBox, see #705
# 0.00.46 (50881) Apr 19, 2011
Fixed: reset all does not return the laser to default position, affects all tabs
Fixed: reset all does not have a confirm dialog, affects all tabs
Improved documentation and minor refactors
# 0.00.45 (50760) Apr 18, 2011
Added a border around combo boxes to make them easier to see on Mac
# 0.00.44 (50757) Apr 16, 2011
Reduced sim speed, keeping the new default speed to be the previous value for "slow", and expanding the range
# 0.00.43 (50754) Apr 16, 2011
# 0.00.42 (50592) Apr 13, 2011
Reduced the size of the protractor in the "prism break" tab to 45% of the original size to make it easier to measure refracted light angles
# 0.00.41 (50577) Apr 12, 2011
Fixed: slider knobs appear in the wrong place on Mac
Fixed memory leaks in ChartNode
Fixed: grid lines disappear after some time in the wave chart
Fixed: the wave probe has data in it even before moving it over the wave node
Start the sim speed slider about 1/3 from the slow end since the wave chart is going too fast
# 0.00.40 (50537) Apr 11, 2011
Switched to use the common SimSpeedControl since it has better support for i18n
Slowed down the chart region in the wave sensor to account for the increased sim speed
# 0.00.39 (50522) Apr 11, 2011
Internationalized
# 0.00.38 (50520) Apr 11, 2011