@@ -1,3 +1,4 @@
+Remove the associated prism from the model when dropped back in the toolbox, resolves #2833
 Handled review issues
 # 0.00.47 (51069) Apr 22, 2011
 Fixed: laser can be rotated out of the play area
